--- a/Blocks5/Blocks5.vcxproj
+++ b/Blocks5/Blocks5.vcxproj
@@ -56,7 +56,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>libs\zlib-1.2.8\contrib\minizip;libs\zlib-1.2.8;libs\tinyxml-2.6.2;libs\sigslot;libs\SDL_image-1.2.12;libs\SDL-1.2.15\include;libs\OpenAL-1.1\include;libs\libvorbis-1.3.4\include;libs\libogg-1.3.2\include;libs\ffmpeg-0.6\include;libs\msinttypes-r26;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>libs\zlib-1.2.8\contrib\minizip;libs\zlib-1.2.8;libs\tinyxml-2.6.2;libs\sigslot;libs\SDL_image-1.2.12;libs\SDL-1.2.15\include;libs\OpenAL-1.1\include;libs\libvorbis-1.3.4\include;libs\libogg-1.3.2\include;libs\ffmpeg-0.6\include;libs\msinttypes-r26;libs\mtrand-1.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>ZLIB_DLL;TIXML_USE_STL;WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -81,11 +81,9 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
       <Optimization>Full</Optimization>
-      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
-      <OmitFramePointers>true</OmitFramePointers>
-      <AdditionalIncludeDirectories>libs\zlib-1.2.8\contrib\minizip;libs\zlib-1.2.8;libs\tinyxml-2.6.2;libs\sigslot;libs\SDL_image-1.2.12;libs\SDL-1.2.15\include;libs\OpenAL-1.1\include;libs\libvorbis-1.3.4\include;libs\libogg-1.3.2\include;libs\ffmpeg-0.6\include;libs\msinttypes-r26;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>libs\zlib-1.2.8\contrib\minizip;libs\zlib-1.2.8;libs\tinyxml-2.6.2;libs\sigslot;libs\SDL_image-1.2.12;libs\SDL-1.2.15\include;libs\OpenAL-1.1\include;libs\libvorbis-1.3.4\include;libs\libogg-1.3.2\include;libs\ffmpeg-0.6\include;libs\msinttypes-r26;libs\mtrand-1.1;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>ZLIB_DLL;TIXML_USE_STL;WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;_SECURE_SCL=0;_SECURE_SCL_THROWS=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
@@ -361,7 +359,6 @@
     <ClInclude Include="src\hq2x.h" />
     <ClInclude Include="src\linedrawer.h" />
     <ClInclude Include="src\manager.h" />
-    <ClInclude Include="src\mtrand.h" />
     <ClInclude Include="src\parameterblock.h" />
     <ClInclude Include="src\particlesystem.h" />
     <ClInclude Include="src\pch.h" />
